# satysfi-class-yabaitech

./: .eslintrc.yml  .gitignore  README.md  Satyristes  document-config.satyh  document.satyh  mutables.satyh  package.json  satysfi-class-yabaitech-doc.opam  satysfi-class-yabaitech.opam  yabaitech.satyh
.github/: dependabot.yml
.github/workflows/: build.yml
__test__/: bibliography.satyh  chapter.satyh  fakedoc.satyh  figure.satyh  footnote.satyh  misc-commands.satyh  regression.test.js  test.saty  theorem.satyh  toc.test.saty
__test__/bibliography/: bibliography.test.saty
__test__/colophon/: colophon.test.saty
__test__/integration/: bibliography.satyh  chapter.satyh  figure.satyh  footnote.satyh  integration.test.saty  misc-commands.satyh  theorem.satyh  todo.satyh
__test__/many_figures/: figure.satyh  many_figures.test.saty
__test__/toc/: toc.test.saty
lib/: chapter-ref.satyg  table-of-contents.satyg  theorem-ref.satyg
pages/: asdf.code-workspace  chapter2.satyh  table-of-contents.satyh  title.satyh
src/: document-config.satyh  document.satyh  font-config.satyh  mutables.satyh  yabaitech.satyh
src/bibliography/: cite.satyh  commands.satyh  data.satyg  repository.satyg  section.satyh
src/chapter/: chapter.satyh  commands.satyh  repository.satyg  repository.satyh
src/colophon/: data.satyh  page.satyh
src/figure/: commands.satyh  (+3 more)
table-of-contents/: repository.satyg
typeset/: bibliography-section.satyh  chapter.satyh  figure.satyh  footnote.satyh  page-footer.satyh  page-header.satyh  paragraph.satyh  review-comment.satyh  theoremish.satyh
(+30 files in other folders)
