opam-version: "2.0"
name: "satysfi-class-yabaitech-doc"
version: "0.0.2"
synopsis: "Document: The yabaitech.tokyo SATySFi class file"
description: """
Document: The yabaitech.tokyo SATySFi class file.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Yuito Murase <yuito@acupof.coffee>"
authors: "Yuito Murase <yuito@acupof.coffee>"
license: "MIT"
homepage: "https://github.com/yabaitechtokyo/satysfi-class-yabaitech"
bug-reports: "https://github.com/yabaitechtokyo/satysfi-class-yabaitech/issues"
dev-repo: "git+https://github.com/yabaitechtokyo/satysfi-class-yabaitech.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-class-yabaitech" {= "0.0.1"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "class-yabaitech-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "class-yabaitech-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
remove: [
  ["satyrographos" "opam" "uninstall"
   "-name" "class-yabaitech-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]